# clenio-kotauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  scratch  scratch.rs  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  test.rs
src-tauri/capabilities/: default.json
src-tauri/permissions/: main.json
src-tauri/src/: clipboard_image.rs  downloads.rs  lib.rs  main.rs  preload.js  settings.rs  ui_chrome.rs  web_selectors.rs
src/components/: SettingsPanel.tsx  WebShell.tsx
src/styles/: global.css  settings.css
tests/e2e/: input-capabilities.test.mjs  run.mjs  settings-panel.test.mjs  web-shell.test.mjs  webview-contract.test.mjs
tests/fixtures/: input-harness.html
tests/helpers/: browser.mjs  defaults.mjs  tauri-mock.mjs
