[package]
name = "kotauri"
version = "0.1.2"
description = "Lightweight customizable Telegram Desktop client"
authors = ["clenio"]
edition = "2021"

[lib]
name = "kotauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tokio = { version = "1.52.2", features = ["time"] }
base64 = "0.22"

[target.x86_64-unknown-linux-gnu.dependencies]
webkit2gtk = "2.0.2"
gtk = "0.18"
gdk-pixbuf = "0.18"
